--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,81 @@
 /crypto-app/node_modules
+/crypto-app/release-builds
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ta.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/LICENSE
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/LICENSES.chromium.html
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/VkICD_mock_icd.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/VkLayer_core_validation.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/VkLayer_object_tracker.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/VkLayer_parameter_validation.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/VkLayer_threading.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/VkLayer_unique_objects.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/chrome_100_percent.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/chrome_200_percent.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/d3dcompiler_47.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/electron-tutorial-app.exe
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/ffmpeg.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/icudtl.dat
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/libEGL.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/libGLESv2.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/natives_blob.bin
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/osmesa.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/resources.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/snapshot_blob.bin
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/v8_context_snapshot.bin
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/version
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/am.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ar.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/bg.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/bn.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ca.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/cs.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/da.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/de.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/el.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/en-GB.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/en-US.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/es.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/es-419.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/et.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/fa.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/fi.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/fil.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/fr.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/gu.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/he.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/hi.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/hr.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/hu.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/id.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/it.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ja.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/kn.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ko.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/lt.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/lv.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ml.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/mr.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ms.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/nb.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/nl.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/pl.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/pt-BR.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/pt-PT.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ro.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/ru.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/sk.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/sl.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/sr.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/sv.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/sw.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/te.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/th.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/tr.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/uk.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/vi.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/zh-CN.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/locales/zh-TW.pak
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/resources/app.asar
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/resources/electron.asar
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/swiftshader/libEGL.dll
+crypto-app/release-builds/electron-tutorial-app-win32-ia32/swiftshader/libGLESv2.dll
